--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     h6 {
     font-family: 'Work Sans';
     font-weight: 800 !important;
+
     }
     
     .btn-xl {
@@ -42,22 +43,22 @@ body {
     }
     
     .navbar-custom .navbar-nav .nav-item .nav-link {
-    text-transform: uppercase;
-    font-size: 0.8rem;
-    font-weight: 700;
-    letter-spacing: 0.1rem;
+      text-transform: uppercase;
+      font-size: 0.8rem;
+      font-weight: 700;
+      letter-spacing: 0.1rem;
     }
     
     header.masthead {
-    position: relative;
-    overflow: hidden;
-    padding-top: calc(7rem + 72px);
-    padding-bottom: 7rem;
-    background: linear-gradient(0deg, #ff6a00 0%, #ee0979 100%);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: scroll;
-    background-size: cover;
+      position: relative;
+      overflow: hidden;
+      padding-top: calc(7rem + 72px);
+      padding-bottom: 7rem;
+      background: linear-gradient(0deg, rgb(212,183, 214) 0%, rgb(64,64,95) 100%);
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-attachment: scroll;
+      background-size: cover;
     }
     
     header.masthead .masthead-content {
@@ -77,7 +78,7 @@ body {
     z-index: 0;
     position: absolute;
     border-radius: 100%;
-    background: linear-gradient(0deg, #ee0979 0%, #ff6a00 100%);
+    background: linear-gradient(0deg, rgb(108,120, 162) 0%, rgb(84,84,115) 100%);
     }
     
     header.masthead .bg-circle-1 {
@@ -106,6 +107,9 @@ body {
     width: 30rem;
     top: -5rem;
     right: 35%;
+    }
+    .bruhshutupani {
+      margin: auto;
     }
     
     @media (min-width: 992px) {
@@ -151,4 +155,7 @@ body {
     
     .btn-secondary:focus {
     box-shadow: 0 0 0 0.2rem rgba(255, 106, 0, 0.5);
+    }
+    #bruhshutupani{
+      width: 75vmin;
     }
