--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     h5,
     h6 {
     font-family: 'Work Sans';
-    font-weight: 800 !important;
+    font-weight: 800 
 
     }
     
@@ -22,7 +22,7 @@ body {
     }
     
     .bg-black {
-    background-color: #000 !important;
+    background-color: #000
     }
     
     .rounded-pill {
@@ -108,9 +108,6 @@ body {
     top: -5rem;
     right: 35%;
     }
-    .bruhshutupani {
-      margin: auto;
-    }
     
     @media (min-width: 992px) {
     header.masthead {
@@ -126,21 +123,21 @@ body {
     }
     
     .bg-primary {
-    background-color: #ee0979 !important;
+    background-color: #33366D !important;
     }
     
     .btn-primary {
-    background-color: #ee0979;
-    border-color: #ee0979;
+    background-color: #33366D;
+    border-color: #33366D;
     }
     
     .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-    background-color: #bd0760 !important;
-    border-color: #bd0760 !important;
+    background-color: #6065C2 !important;
+    border-color: #6065C2 !important;
     }
     
     .btn-primary:focus {
-    box-shadow: 0 0 0 0.2rem rgba(238, 9, 121, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(33, 41, 161, 0.5);
     }
     
     .btn-secondary {
@@ -149,13 +146,10 @@ body {
     }
     
     .btn-secondary:active, .btn-secondary:focus, .btn-secondary:hover {
-    background-color: #cc5500 !important;
-    border-color: #cc5500 !important;
+    background-color: #cc5500 
+    border-color: #cc5500 
     }
     
     .btn-secondary:focus {
     box-shadow: 0 0 0 0.2rem rgba(255, 106, 0, 0.5);
-    }
-    #bruhshutupani{
-      width: 75vmin;
     }
